--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="./javascripts/vendors/webpd/webpd-latest.min.js"></script>
+    <script type="text/javascript" src="./javascripts/vendors/webpd/pd-fileutils.js"></script>
+    <title>PURE DATA with REACT</title>
   </head>
   <body>
     <noscript>
